# DataShield

./: COMMERCIAL_UI_NOTES.md  Dockerfile  INSTALL_AND_USE_BY.md  INSTALL_PRODUCTION_BY_v2.1.md  INSTALL_PRODUCTION_BY_v2.2.md  INSTALL_WINDOWS_PY315.md  MASKING_FIX_NOTES_v2.3.2.md  MASKING_FIX_NOTES_v2.3.3.md  README.md  RELEASE_NOTES_v2.5.0.md  RELEASE_NOTES_v2.7.0.md  RELEASE_NOTES_v2.7.1.md  RELEASE_NOTES_v2.7.2.1.md  RELEASE_NOTES_v2.7.2.md  V2_4_1_HOTFIX_NOTES.md  V2_4_2_AUTH_HOTFIX_NOTES.md  V2_4_3_CARD_INTEGRITY_FIX_NOTES.md  V2_4_4_FIELD_MAPPING_FIX_NOTES.md  V2_4_6_UI_Syntax_Login_Hotfix.md  V2_4_7_ANALYZE_UX_FIX_NOTES.md  V2_4_8_UI_NULL_SAFE_FIX_NOTES.md  V2_4_AUDIT_COVERAGE_NOTES.md  V2_6_2_TABLE_VIEW_PREVIEW_NOTES.md  V2_6_3_INLINE_DB_TABLE_PREVIEW_NOTES.md  V2_6_4_AUTH_ACTIVATION_FIX_NOTES.md  V2_6_5_FULL_OPERATOR_UX_PASS_NOTES.md  V2_6_ENTERPRISE_FRONTEND_PACK_NOTES.md  docker-compose.yml  pyproject.toml  ui_script.js
config/: example_config.yaml
datashield/: __init__.py  cli.py  config.py  controlplane.py  migrate.py  pyproject.toml  worker.py
datashield.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datashield/api/: app.py  ui.html
datashield/audit/: __init__.py
datashield/cache/: __init__.py
datashield/dictionaries/: __init__.py
datashield/etl/: __init__.py  fk_graph.py  pipeline.py
datashield/maskers/: __init__.py  base.py  services.py
datashield/policies/profiles/: banking_retail_by.yaml  banking_transactions_by.yaml
datashield/services/: __init__.py  policy_loader.py  strict_mode.py  validators.py
(+9 files in other folders)
